--- a/realt-client/application/templates/index.html
+++ b/realt-client/application/templates/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Realt Company</title>
-<meta name="description" content="">
-<meta name="author" content="WebThemez">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-</head>
+
+{% include 'parts/head.html' %}
 
 <body>
 
@@ -15,27 +7,9 @@
 
  {% include 'parts/header.html' %}
 
-<div id="#top"></div>
 <section id="home">
-  <div class="banner-container"> 
-  	<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel" data-slide-to="1"></li>
-    <li data-target="#carousel" data-slide-to="2"></li>
-  </ol>
-  <!-- Carousel items -->
-  <div class="carousel-inner">
-    <div class="active item"><img src="{{ url_for('static', filename='img/banner-bg.jpg') }}" alt="banner" /></div>
-    <div class="item"><img src="{{ url_for('static', filename='img/banner-bg2.jpg') }}" alt="banner" /></div>
-    <div class="item"><img src="{{ url_for('static', filename='img/banner-bg3.jpg') }}" alt="banner" /></div>
-  </div>
-  <!-- Carousel nav -->
-  <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
-</div>
-	
-  </div>  
+
+    {% include 'parts/slider.html' %}
   
   <div class="container hero-text2">
   <h3>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat<br/> fabulas complectitur deterruisset at pro</h3>
@@ -139,12 +113,7 @@
 </section>
 
 {% include 'parts/footer.html' %}
+{% include 'parts/scripts.html' %}
 
-<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/design/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/design/jquery.nav.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/design/scrollnav.js') }}"></script>
-<script type=text/javascript>$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};</script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/main-script.js') }}"></script>
 </body>
 </html>
