check and notice

--- a/realt-client/application/templates/index.html
+++ b/realt-client/application/templates/index.html
@@ -112,6 +112,7 @@
   <!--/.container-->
 </section>
 
+{% include 'parts/popup.html' %}
 {% include 'parts/footer.html' %}
 {% include 'parts/scripts.html' %}
 
