--- a/realt-client/application/templates/parts/scripts.html
+++ b/realt-client/application/templates/parts/scripts.html
@@ -3,3 +3,4 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/design/jquery.nav.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/design/slider.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/main-script.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/maskedinput.js') }}"></script>
