--- a/realt-client/application/templates/parts/head.html
+++ b/realt-client/application/templates/parts/head.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Realt Company</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
