--- a/realt-client/application/templates/parts/popup.html
+++ b/realt-client/application/templates/parts/popup.html
@@ -1,13 +1,12 @@
- <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" \
-      aria-hidden="true" id="myModal">
+ <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="myModal">
      <div class="modal-dialog modal-sm">
          <div class="modal-content">
              <div class="modal-header">
                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                 <h4 class="modal-title">Ошибка ввода</h4>
+                 <h4 class="modal-title" id="popup-title"></h4>
              </div>
              <div class="modal-body">
-                 <p id="text_for_error"></p>
+                 <p id="popup-message"></p>
              </div>
              <div class="modal-footer">
                  <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
