create private office

--- a/realt-client/application/templates/parts/popup.html
+++ b/realt-client/application/templates/parts/popup.html
@@ -4,10 +4,10 @@
          <div class="modal-content">
              <div class="modal-header">
                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                 <h4 class="modal-title">Ошибка ввода</h4>
+                 <h4 class="modal-title" id="title_for_popup"></h4>
              </div>
              <div class="modal-body">
-                 <p id="text_for_error"></p>
+                 <p id="text_for_popup"></p>
              </div>
              <div class="modal-footer">
                  <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
