--- a/realt-client/application/templates/parts/header.html
+++ b/realt-client/application/templates/parts/header.html
@@ -21,7 +21,7 @@
     <div id="login-user-nav">
         {% if session.role == 1 %}
         <ul class="nav navbar-nav" id="authUserNav">
-          <li><a href="#">Профиль</a></li>
+          <li><a href="{{ url_for('private') }}">Профиль</a></li>
           <li><a href="#">Мои объявления</a></li>
           <li><a href="#">Разместить объявление</a></li>
         </ul>
