--- a/realt-client/application/templates/parts/edit_user.html
+++ b/realt-client/application/templates/parts/edit_user.html
@@ -33,6 +33,17 @@
                             <label for="birthday">Дата рождения:</label>
                             <input type="text" class="form-control" id="birthday" name="birthday" placeholder="Введите дату рождения" required>
                         </div>
+                        <div class="form-group">
+                            <label for="role">Права доступа:</label>
+                            <div id="role">
+                                <div class="radio">
+                                    <label><input type="radio" name="role" value="1">Пользователь</label>
+                                </div>
+                                <div class="radio">
+                                    <label><input type="radio" name="role" value="2">Администратор</label>
+                                </div>
+                            </div>
+                        </div>
                         <input type="text" hidden="true" id="user_id"/>
                         <input type="text" hidden="true" id="selectedRowIndex"/>
                     </div>
