--- a/realt-client/application/templates/parts/header.html
+++ b/realt-client/application/templates/parts/header.html
@@ -28,7 +28,7 @@
         {% endif %}
         {% if session.role == 2 %}
         <ul class="nav navbar-nav" id="authAdminNav">
-          <li><a href="#">Профиль</a></li>
+          <li><a href="{{ url_for('private') }}">Профиль</a></li>
           <li><a href="{{ url_for('get_users') }}">Просмотр пользователей</a></li>
         </ul>
         {% endif %}
