Add more seed. Configure running app. Application page.

--- a/realt-client/application/templates/users.html
+++ b/realt-client/application/templates/users.html
@@ -43,6 +43,7 @@
     <button id="deleteUsersBtn" class="btn btn-primary">Удалить</button>
 </div>
 </section>
+{% include 'parts/popup.html' %}
 {% include 'parts/edit_user.html' %}
 {% include 'parts/scripts.html' %}
 </body>
