--- a/realt-client/application/templates/application_form.html
+++ b/realt-client/application/templates/application_form.html
@@ -2,6 +2,7 @@
 {% include 'parts/header.html' %}
 
 <div class="content-container">
+    <h3 class="heading text-center">Форма для объявления</h3>
 <div class="container">
     <div class="row">
       <form role="form" id="applicationForm">
@@ -106,25 +107,26 @@
 
         <section id="features">
         <div class="col-md-12">
-            <h3>Удобства:</h3>
+            <div class="col-md-4 col-sm-4">
+                <h3>Удобства:</h3>
             <label><input class="checkbox-inline" name="fridge" type="checkbox" value="">Холодильник</label>
             <label><input class="checkbox-inline" name="tv" type="checkbox" value="">Телевизор</label>
             <label><input class="checkbox-inline" name="internet" type="checkbox" value="">Интернет</label>
             <label><input class="checkbox-inline" name="gas_stove" type="checkbox" value="">Плита</label>
-            <label><input class="checkbox-inline" name="microwave" type="checkbox" value="">Микроволновка</label>
-
-        </div>
-
-        <div class="col-md-12">
-            <label><input class="checkbox-inline" name="washing_machine" type="checkbox" value="">Стиральная машина</label>
+            <label><input class="checkbox-inline" name="microwave" type="checkbox" value="">Микроволновка</label><label><input class="checkbox-inline" name="washing_machine" type="checkbox" value="">Стиральная машина</label>
             <label><input class="checkbox-inline" name="bath" type="checkbox" value="">Ванна</label>
             <label><input class="checkbox-inline" name="balcony" type="checkbox" value="">Балкон</label>
             <label><input class="checkbox-inline" name="furniture" type="checkbox" value="">Мебель</label>
             <label><input class="checkbox-inline" name="condit" type="checkbox" value="">Кондиционер</label>
+            </div>
+
+            <div class="col-md-4 col-sm-4">
+                <button id="sendApplicationBtn" type="button" class="btn btn-success btn-block">Разместить объявление</button>
+                <button type="reset" class="btn btn-info btn-block">Очистить форму</button>
+            </div>
         </div>
         </section>
       </form>
-        <button type="button" class="btn btn-primary">Разместить объявление</button>
     </div>
 </div>
 </div>
