Check existing user while the registration.

--- a/realt-client/application/templates/application_form.html
+++ b/realt-client/application/templates/application_form.html
@@ -105,9 +105,9 @@
             </div>
         </div>
 
-        <section id="features">
         <div class="col-md-12">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
+            <section id="features">
                 <h3>Удобства:</h3>
             <label><input class="checkbox-inline" name="fridge" type="checkbox" value="">Холодильник</label>
             <label><input class="checkbox-inline" name="tv" type="checkbox" value="">Телевизор</label>
@@ -118,14 +118,12 @@
             <label><input class="checkbox-inline" name="balcony" type="checkbox" value="">Балкон</label>
             <label><input class="checkbox-inline" name="furniture" type="checkbox" value="">Мебель</label>
             <label><input class="checkbox-inline" name="condit" type="checkbox" value="">Кондиционер</label>
-            </div>
+            </section>
 
-            <div class="col-md-4 col-sm-4">
-                <button id="sendApplicationBtn" type="button" class="btn btn-success btn-block">Разместить объявление</button>
-                <button type="reset" class="btn btn-info btn-block">Очистить форму</button>
+            <button id="sendApplicationBtn" type="button" class="btn btn-success btn-block">Разместить объявление</button>
+            <button type="reset" class="btn btn-info btn-block" style="margin-bottom: 30px;">Очистить форму</button>
             </div>
         </div>
-        </section>
       </form>
     </div>
 </div>
