--- a/realt-client/application/templates/application_form.html
+++ b/realt-client/application/templates/application_form.html
@@ -19,9 +19,11 @@
                   <div class="form-group">
                     <label for="propertyType">Тип недвижимости:</label>
                     <select class="form-control" id="propertyType">
-                        <option value="flat">Квартира</option>
-                        <option value="house">Дом</option>
-                        <option value="room">Комната</option>
+
+                        {% for property_type in data['property_types'] %}
+                            <option value="{{ property_type.id }}">{{ property_type.type }}</option>
+                        {% endfor %}
+
                     </select>
                 </div>
               </div>
@@ -36,20 +38,21 @@
                 <div class="form-group">
                         <label for="region">Область:</label>
                             <select class="form-control" id="region">
-                                <option>Минская</option>
-                                <option>Могилевская</option>
-                                <option>Брестская</option>
-                                <option>Гродненская</option>
-                                <option>Гомельская</option>
-                                <option>Витебская</option>
+
+                                {% for region in data['regions'] %}
+                                    <option value="{{ region.id }}">{{ region.name }}</option>
+                                {% endfor %}
+
                             </select>
                 </div>
                 <div class="form-group">
                         <label for="street_type">Ул. / пр-т / пер-к:</label>
                             <select class="form-control" id="street_type">
-                                <option>Улица</option>
-                                <option>Проспект</option>
-                                <option>Переулок</option>
+
+                                {% for address_type in data['address_types'] %}
+                                    <option value="{{ address_type.id }}">{{ address_type.street_type }}</option>
+                                {% endfor %}
+
                             </select>
                     </div>
                 <div class="form-group">
@@ -109,15 +112,13 @@
             <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
             <section id="features">
                 <h3>Удобства:</h3>
-            <label><input class="checkbox-inline" name="fridge" type="checkbox" value="">Холодильник</label>
-            <label><input class="checkbox-inline" name="tv" type="checkbox" value="">Телевизор</label>
-            <label><input class="checkbox-inline" name="internet" type="checkbox" value="">Интернет</label>
-            <label><input class="checkbox-inline" name="gas_stove" type="checkbox" value="">Плита</label>
-            <label><input class="checkbox-inline" name="microwave" type="checkbox" value="">Микроволновка</label><label><input class="checkbox-inline" name="washing_machine" type="checkbox" value="">Стиральная машина</label>
-            <label><input class="checkbox-inline" name="bath" type="checkbox" value="">Ванна</label>
-            <label><input class="checkbox-inline" name="balcony" type="checkbox" value="">Балкон</label>
-            <label><input class="checkbox-inline" name="furniture" type="checkbox" value="">Мебель</label>
-            <label><input class="checkbox-inline" name="condit" type="checkbox" value="">Кондиционер</label>
+
+                {% for feature in data['features'] %}
+                    <label>
+                        <input class="checkbox-inline" type="checkbox" value="{{ feature.id }}">{{ feature.name }}
+                    </label>
+                {% endfor %}
+
             </section>
 
             <button id="sendApplicationBtn" type="button" class="btn btn-success btn-block">Разместить объявление</button>
