Created api and page for user's applications

--- a/realt-client/application/templates/admin_applications.html
+++ b/realt-client/application/templates/admin_applications.html
@@ -191,9 +191,10 @@
 
     <div class="col-md-12">
         <div class="col-md-4 col-md-offset-4">
-            <button onclick="changeApplicationStatus(1)" class="btn btn-block btn-success" id="approve-btn">Подтвердить</button>
-            <button onclick="changeApplicationStatus(0)" class="btn btn-block btn-info" id="not-approve-btn">Не подтверждать</button>
-            <button onclick="changeApplicationStatus(2)" class="btn btn-block btn-danger" id="reject-btn">Отклонить</button>
+            <button onclick="changeApplicationStatus(1)" class="btn btn-block btn-success" id="approve-app--btn">Подтвердить</button>
+            <button onclick="changeApplicationStatus(0)" class="btn btn-block btn-info" id="not-approve-app-btn">Не подтверждать</button>
+            <button onclick="changeApplicationStatus(2)" class="btn btn-block btn-danger" id="reject-app-btn">Отклонить</button>
+            <button class="btn btn-block btn-default" id="delete-app-btn">Удалить</button>
         </div>
     </div>
 
