Add api for getting application data. Popup to view app data.

--- a/realt-client/application/static/css/styles.css
+++ b/realt-client/application/static/css/styles.css
@@ -582,6 +582,13 @@ footer {
 	margin-top: 40px;
 }
 
+.userApplicationsTable td {
+	cursor: pointer;
+}
+.adminApplicationsTable td {
+	cursor: pointer;
+}
+
 /*users table*/
 
 /*/users table*/
